# meshtassy

./: .gitignore
meshtassy-telemetry/: Cargo.toml
meshtassy-telemetry/src/: environmental_telemetry.rs  lib.rs
meshtassy-telemetry/src/sensors/: bme.rs  mod.rs  scd30.rs
nrf/src/boards/: seeed_xiao_nrf52840.rs  wisblock_rak4631.rs
rp/: Cargo.toml  build.rs
rp/.cargo/: config.toml
rp/src/: main.rs  usb_framer.rs
rp/src/boards/: README.md  mod.rs  raspberry_pi_pico.rs  template.rs  template_no_leds.rs
